--- a/.pipelines/terraform-dev.yaml
+++ b/.pipelines/terraform-dev.yaml
@@ -1,5 +1,3 @@
-# azure-pipelines.yml
-
 trigger:
   paths:
     include:
@@ -10,6 +8,7 @@ stages:
     displayName: Terraform CI/CD
     jobs:
       - job: Deploy Dev environment
+        displayName: "Deploy Dev environment"
         pool:
             name: noteapp-agents
         steps:
