--- a/.pipelines/terraform-dev.yaml
+++ b/.pipelines/terraform-dev.yaml
@@ -3,6 +3,10 @@ trigger:
     include:
       - environments/dev/*
 
+
+variables:
+ - group: terraform-secrets
+
 stages:
   - stage: TerraformDeployment
     displayName: Terraform CI/CD
@@ -15,6 +19,10 @@ stages:
             - script: |
                 cd $(Build.SourcesDirectory)/environments/dev/
                 terraform init -input=false
+              env:
+                ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+                ARM_TENANT_ID : $(ARM_TENANT_ID)
+                ARM_USE_MSI: $(ARM_USE_MSI)
               displayName: 'Terraform Init'
 
             - script: |
